--- a/knjiga.css
+++ b/knjiga.css
@@ -896,6 +896,7 @@ footer {
   margin-left: 2.5%;
   line-height: 4.5vw;
   margin-top: -0.7%;
+  margin-bottom: 7%;
   }
   /* FOOTER*/
   footer {
@@ -1019,6 +1020,7 @@ footer {
    font-size: 4.4vw;
    margin-left: 2.5%;
    line-height: 5.3vw;
+   margin-bottom: 7%;
    }
    /* FOOTER*/
    footer {
@@ -1122,6 +1124,7 @@ footer {
    font-size: 4.6vw;
    margin-left: 2.5%;
    line-height: 5.3vw;
+   margin-bottom: 10%;
    }
   /*FOOTER MOBILNI*/
   footer {
