--- a/knjiga.css
+++ b/knjiga.css
@@ -830,10 +830,10 @@ footer {
 @media screen and (max-width: 590px) {
   /* DRUGA SEKCIJA: Biografija */
   .biografija {
-    height: 153vw;
+    height: 155vw;
   }
   .biografija img {
-    margin-bottom: -28%;
+    margin-bottom: -30%;
   }
   .biografija-text pre {
     font-size: 3.6vw;
@@ -918,10 +918,10 @@ footer {
   }
    /* DRUGA SEKCIJA: Biografija */
   .biografija {
-    height: 171vw;
+    height: 175vw;
   }
   .biografija img {
-    margin-bottom: -30%;
+    margin-bottom: -33%;
   }
   .biografija-text pre {
     font-size: 4.2vw;
@@ -1000,15 +1000,14 @@ footer {
   }
    /* DRUGA SEKCIJA: Biografija */
    .biografija {
-    height: 174vw;
+    height: 179vw;
   }
   .biografija img {
-    margin-bottom: -33%;
+    margin-bottom: -35%;
   }
   .biografija-text pre {
     font-size: 4.5vw;
     line-height: 5.3vw;
-    margin-left: 3.5%;
     margin-top: 8%
   }
   #wingdings-b {
@@ -1050,15 +1049,14 @@ footer {
   }
   /* DRUGA SEKCIJA: Biografija */
   .biografija {
-    height: 180vw;
+    height: 185vw;
   }
   .biografija img {
-    margin-bottom: -37%;
+    margin-bottom: -38%;
   }
   .biografija-text pre {
     font-size: 4.6vw;
     line-height: 5.7vw;
-    margin-left: 2%;
     margin-top: 9%
   }
   #wingdings-b {
@@ -1105,6 +1103,21 @@ footer {
   .navigation-bar li a {
     font-size: 0.7em;
     padding: 0 9px;
+  }
+   /* DRUGA SEKCIJA: Biografija */
+   .biografija {
+    height: 188vw;
+  }
+  .biografija img {
+    margin-bottom: -40%;
+  }
+  .biografija-text pre {
+    font-size: 4.87vw;
+    line-height: 5.8vw;
+    margin-top: 9%
+  }
+  #wingdings-a {
+    margin-top: 1%;
   }
   /* ASIDE: Mima-lično */
   .mima-text {
