--- a/responsive.css
+++ b/responsive.css
@@ -476,10 +476,12 @@
     #wingdings-a {
       margin-top: 1%;
       font-size: 1.5em;
+      font-family: 'Courier New', Courier, monospace;
     }
     #wingdings-b {
       margin-top: -7%;
       font-size: 1.5em;
+      font-family: 'Courier New', Courier, monospace;
     }
     /* TREĆA SEKCIJA: Umetnički-Blok*/
     .umetnički-blok {
