--- a/responsive.css
+++ b/responsive.css
@@ -13,14 +13,13 @@
     }
    /* DRUGA SEKCIJA: Biografija */
     .biografija {
+      background-position: 100% 0px;
       position: relative;
       flex-direction: column-reverse;
       align-items: center;
       height: 104vw;
     }
     .biografija-text {
-      background-image: url('slike/mima-prazno.png');
-      background-size: 110% 120%;
       position: absolute;
       width: 100%;
       top: 0%;
@@ -150,6 +149,10 @@
   /* Prelazak sa Flex-Row na Flex-Column u sedmoj sekciji (max-width 900px) */
   
   @media screen and (max-width: 900px) {
+    /* DRUGA SEKCIJA: Biografija */
+    .biografija {
+      background-position: 102% 18px;
+    }
     /* ASIDE: slika-planina (text) */
     .slika-text {
       font-size: 1.1em;
@@ -253,6 +256,7 @@
     /* DRUGA SEKCIJA: Biografija */
     .biografija {
       height: 125vw;
+      background-position: 102% 34px;
     }
     .biografija img {
       position: relative;
@@ -355,6 +359,7 @@
     /* DRUGA SEKCIJA: Biografija */
     .biografija {
       height: 128vw;
+      background-position: 102% 40px;
     }
     .biografija img {
       margin-bottom: -25%;
@@ -464,6 +469,8 @@
     /* DRUGA SEKCIJA: Biografija */
     .biografija {
       height: 155vw;
+      background-repeat: repeat;
+      background-position: 0px -22px;
     }
     .biografija img {
       margin-bottom: -30%;
@@ -472,12 +479,6 @@
       font-size: 3.6vw;
       line-height: 4.1vw;
       margin-left: 6%;
-    }
-    #wingdings-a {
-      margin-top: 1%;
-    }
-    #wingdings-b {
-      margin-top: -7%;
     }
     /* TREĆA SEKCIJA: Umetnički-Blok*/
     .umetnički-blok {
@@ -555,6 +556,7 @@
      /* DRUGA SEKCIJA: Biografija */
     .biografija {
       height: 175vw;
+      background-position: 0px 25px;
     }
     .biografija img {
       margin-bottom: -33%;
@@ -564,12 +566,6 @@
       line-height: 5vw;
       margin-left: 5%;
       margin-top: 8%
-    }
-    #wingdings-a {
-      margin-top: 2%;
-    }
-    #wingdings-b {
-      margin-top: -8%;
     }
     /* TREĆA SEKCIJA: Umetnički-Blok*/
     .umetnički-blok {
@@ -640,6 +636,7 @@
      /* DRUGA SEKCIJA: Biografija */
      .biografija {
       height: 179vw;
+      background-position: 0px 30px;
     }
     .biografija img {
       margin-bottom: -35%;
@@ -648,9 +645,6 @@
       font-size: 4.5vw;
       line-height: 5.3vw;
       margin-top: 8%
-    }
-    #wingdings-b {
-      margin-top: -10%;
     }
     /* ASIDE: Mima-lično */
     .mima-text {
@@ -689,6 +683,7 @@
     /* DRUGA SEKCIJA: Biografija */
     .biografija {
       height: 185vw;
+      background-position: 0px 40px;
     }
     .biografija img {
       margin-bottom: -38%;
@@ -697,9 +692,6 @@
       font-size: 4.6vw;
       line-height: 5.7vw;
       margin-top: 9%
-    }
-    #wingdings-b {
-      margin-top: -10%;
     }
     /* TREĆA SEKCIJA: Umetnički-Blok*/
     .umetnički-blok {
@@ -754,9 +746,6 @@
       font-size: 4.87vw;
       line-height: 5.8vw;
       margin-top: 9%
-    }
-    #wingdings-a {
-      margin-top: 1%;
     }
     /* ASIDE: Mima-lično */
     .mima-text {
