--- a/responsive.css
+++ b/responsive.css
@@ -501,6 +501,10 @@
       font-size: 1.1em;
       padding: 0 15px;
     }
+    /* TREĆA SEKCIJA: Umetnički-Blok*/
+    .slika-četkice-text {
+      margin-top: -10%;
+    }
     /* PETA SEKCIJA: Umetnički-Blok 3 */
     .slika-planina div p {
       font-size: 0.9em;
@@ -567,7 +571,7 @@
     }
     /* TREĆA SEKCIJA: Umetnički-Blok*/
     .umetnički-blok {
-      margin-top: 105px;
+      margin-top: 100px;
     }
     .slika-četkice-text {
       margin-left: 30%;
@@ -691,7 +695,7 @@
     }
     /* TREĆA SEKCIJA: Umetnički-Blok*/
     .umetnički-blok {
-      margin-top: 105px;
+      margin-top: 95px;
     }
     .slika-četkice-text {
       margin-left: 30%;
@@ -702,7 +706,7 @@
     }
     .slika-četkice-text p {
       font-size: 4.9vw;
-      line-height: 5.3vw;
+      line-height: 5.4vw;
       margin-top: -2%;
     }
     /* ASIDE: slika-planina (text) */
