--- a/knjiga.css
+++ b/knjiga.css
@@ -158,6 +158,7 @@ ASIDE: slika-planina (text)
   margin-top: -2px;
   padding-top: 35px;
   font-style: italic;
+  
 }
 /* 
 PETA SEKCIJA: Umetnički-Blok 3 
@@ -191,6 +192,7 @@ KNJIGE
   padding: 30px 0px 5px;
   margin-top: -6%;
   font-family: "Monsterrat", sans-serif;
+  border-bottom: 5px ridge #f2f2f2;
 }
 .knjige > p {
   font-size: 3.2vw;
@@ -340,7 +342,7 @@ footer {
   font-size: 1.62vw;
   background-color: transparent;
   border: 1px solid #adb5bd;
-  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 
