--- a/responsive.css
+++ b/responsive.css
@@ -804,10 +804,10 @@
   }
   /* ASIDE: Mima-lično */
   .mima-text {
-    width: 80%;
+    width: 85%;
   }
   #mima-potpis {
-    margin-left: 0;
+    margin-left: 2%;
   }
   /* FOOTER*/
   #mimaarbid-text {
