--- a/responsive.css
+++ b/responsive.css
@@ -819,8 +819,8 @@
     margin-top: 9%;
   }
    /* ASIDE: Mima-lično */
-   .mima-text {
-    width: 95%;
+   .mima-text p {
+    width: 97%;
   }
 }
   
@@ -848,7 +848,7 @@
     margin-bottom: -24%;
   }
   #mima-potpis {
-    margin-left: -9%;
+    margin-left: 0%;
    
   }
   /* ASIDE: About */
