--- a/knjiga.css
+++ b/knjiga.css
@@ -84,7 +84,7 @@ TREĆA SEKCIJA: Umetnički blok
   font-size: 1.7vw;
   display: flex;
   margin-top: 50px;
-  justify-content:flex-start;
+  justify-content: flex-start;
 }
 .slika-palme {
   width: 65%;
@@ -243,7 +243,7 @@ ASIDE: Mima-lično
   margin-bottom: -3%;
 }
 #mima-potpis {
-  font-family: "Sacramento", "Parisienne", cursive;
+  font-family: "Sacramento", cursive;
   font-size: 3.2vw;
   text-align: right;
   margin-left: -3.9%;
@@ -272,7 +272,7 @@ ASIDE: Mima-lično
   font-size: 1.9vw;
   margin-left: 5%;
   line-height: 2.3vw;
-  margin-top: -0.7%;
+  margin-top: -1%;
 }
 /* 
 FOOTER 
@@ -290,7 +290,7 @@ footer {
 #mimaarbid-text {
   position: relative;
   bottom: -3.2%;
-  font-family: "Sacramento", "Parisienne", cursive;
+  font-family: "Sacramento", cursive;
   font-size: 4.5vw;
   font-weight: lighter;
 }
