--- a/knjiga.css
+++ b/knjiga.css
@@ -55,7 +55,7 @@ DRUGA SEKCIJA: Biografija
   margin-top: 6.5%;
   font-size: 1.67vw;
   line-height: 2.1vw;
-  font-family: "Marion", serif;
+  font-family: "Marion", "Georgia", serif;
 }
 #wingdings-a, #wingdings-b {
   opacity: 0.5;
